# musl

./: CMakeLists.txt  Makefile  README  README.md  configure  libc.py
arch/wasm32/: atomic_arch.h  pthread_arch.h  reloc.h  syscall_arch.h  wasm.js  wasm.syms
arch/wasm32/bits/: alltypes.h.in  syscall.h  syscall.h.in
include/: unistd.h
src/env/: __libc_start_main.c
src/internal/: malloc_impl.h  pthread_impl.h
src/malloc/: malloc.c
src/malloc/wasm32/: expand_heap.c
src/mman/wasm32/: madvise.c
src/signal/wasm32/: block.c  raise.c
src/stdio/: vfwscanf.c
src/stdlib/: wcstod.c  wcstol.c
src/thread/wasm32/: __wait.c
